Pretty much a one-commit redesign
Thanks, CodePen!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,6 @@ Now have fun looking around. :)
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="{{page.teaser}}">
 
 	<title>{{ page.title }} | John D. Jameson </title>
 
@@ -25,13 +24,13 @@ Now have fun looking around. :)
 	<link rel="author" href="https://plus.google.com/u/0/113914298266231922059/posts">
 	<link rel="alternate" type="application/rss+xml"  href="http://www.johndjameson.com/feed.xml" title="John D. Jameson">
 
-	<script type="text/javascript" src="//use.typekit.net/yhp6wqr.js"></script>
+	<script type="text/javascript" src="//use.typekit.net/gqu6ggi.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
 
 	<header class="l-header" role="banner">
-		<nav role="navigation"><a class="l-header-logo" href="/">Jameson</a></nav>
+		<nav role="navigation"><a class="logo" href="/">John D. Jameson</a></nav>
 	</header>
 
 	<!-- <div id="dev_log"></div> -->
@@ -50,5 +49,15 @@ Now have fun looking around. :)
 		ga('create', 'UA-42673242-1', 'johndjameson.com');
 		ga('send', 'pageview');
 	</script>
+
+	<footer class="l-footer">
+		<div>
+			<img class="c-circle" src="http://johndjameson.com/img/avatar.jpg" alt="The amiable John D. Jameson">
+			<p>John D. Jameson</p>
+			<p>Web designer and front-end developer in Orlando, Florida.</p>
+		</div>
+	</footer>
+
+	<p class="l-quote">“You're ready. Start making stuff.” —&nbsp;Austin&nbsp;Kleon</p>
 </body>
 </html>
