--- a/sass/application.sass
+++ b/sass/application.sass
@@ -43,11 +43,13 @@
 //   Modules
 // -------------------------------------
 
-@import "modules/list"
+@import "modules/logo"
+
+@import "modules/post"
 
 @import "modules/preview"
 
-@import "modules/post"
+@import "modules/well"
 
 // -------------------------------------
 //   Inbox
