--- a/sass/modules/_well.sass
+++ b/sass/modules/_well.sass
@@ -1,11 +1,17 @@
 // *************************************
 //
-//   Module
-//   -> This is an example module
+//   Well
+//   -> An called-out area for code, etc.
 //
 // *************************************
 
-// .module
+.well
+  background-color: #f4f4f4
+  border: 1px solid $c-border
+  border-radius: $b-borderRadius
+  margin: 0 0 $b-whitespace 0
+  overflow: auto
+  padding: $b-whitespace
 
 // -------------------------------------
 //   Modifiers
