--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -9,18 +9,21 @@
   +box-sizing(border-box)
 
 html
-  font-size: $base-fontSize
+  font-size: 100%
+  +respond-to($bp-layout)
+    font-size: percentage($b-fontSize-bp/$b-fontSize)
 
 body
-  background: $base-background
-  color: $base-color
-  font-family: $base-fontFamily
-  font-size: 100%
-  line-height: $base-lineHeight
+  background: $c-background
+  color: $c-text
+  font-family: $b-fontFamily
+  line-height: $b-lineHeight
+  padding: 0 $b-whitespace
+  text-rendering: optimizeLegibility
 
-::selection
-  background-color: mix($base-color-a, $base-background, 85%)
-  color: $base-background
+
+//::selection
+
 
 // -------------------------------------
 //   Block Content
@@ -28,13 +31,13 @@ body
 
 p
   @extend %fontSize-a
-  margin: 0 0 rem($base-whitespace)
+  margin: 0 0 $b-whitespace
 
 ol, ul
   @extend %fontSize-a
-  margin: 0 0 rem($base-whitespace)
-  padding: 0 0 0 rem($base-whitespace)
-  
+  margin: 0 0 $b-whitespace
+  padding: 0 0 0 $b-whitespace
+
   ol, ul
     margin: 0
 
@@ -43,42 +46,31 @@ ol, ul
 // -------------------------------------
 
 a
-  @extend %transition-fast
-  border-bottom: 2px solid $base-link-background
-  color: $base-link-color
+  color: $c-primary
   font-weight: bold
   text-decoration: none
 
-  &:hover, &:focus
-    background-color: $base-link-background
-    +box-shadow(-0.125em 0 0 $base-link-background, 0.125em 0 0 $base-link-background)
-
-abbr
-  @extend %c-shout
-  font-size: 95%
-
-b
-  font-weight: normal
-
 blockquote
-  margin: rem($base-whitespace) 0
-  border-left: 4px solid $base-color-a
-  padding: 0 rem($base-whitespace)
-
-  &:first-child
-    margin-top: 0
+  border-left: 1px solid $c-border
+  color: $c-heading
+  font-style: italic
+  margin: 0
+  padding: 0 0 0 $b-whitespace
 
 code
-  +box-shadow(-0.125em 0 0 mix($base-link-background, $base-background, 50%), 0.125em 0 0 mix($base-link-background, $base-background, 50%))
-  background: mix($base-link-background, $base-background, 50%)
-  font-family: $c-mono-fontFamily
-  font-size: 90%
+  font-family: $b-fontFamily-monospace
 
-em
-  font-style: italic
+img
+  display: block
+  max-width: 100%
+  margin: 0 auto
 
-strong
-  font-weight: bold
+p
+  margin: 0 0 $b-whitespace 0
+
+pre
+  font-family: inherit
+  margin: 0
 
 sup
   font-size: 0.7em
