--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -9,7 +9,7 @@
 //   @font-face
 // -------------------------------------
 
-@font-face 
+@font-face
   font-family: 'icomoon'
   src: url('fonts/icomoon.eot')
 
@@ -30,7 +30,7 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-.icon--rss::before 
+.icon--rss::before
   @extend %icomoon
   content: "\e605"
 
@@ -57,46 +57,32 @@
 
 // ----- Base Colors ----- //
 
-$base-background: #fff
-$base-color: #222
-$base-color-soft: mix($base-color, $base-background, 70%)
-$base-color-softer: mix($base-color, $base-background, 40%)
-$base-color-softest: mix($base-color, $base-background, 15%)
-$base-color-a: #705993
-$base-header-color: #333
-$base-link-color: $base-color-a
-$base-link-background: mix($base-color-a, $base-background, 25%)
-
+$c-text: #222
+$c-subdued: #666
+$c-heading: #333
+$c-background: white
+$c-primary: #705b91
+$c-border: #ccc
 
 // ----- Base Borders & Box Shadows ----- //
 
-$base-border: 1px solid $base-color
-$base-borderRadius: 4px
-$base-boxShadow: 0 1px 2px rgba($base-color, 0.25)
+$b-borderRadius: 10px
 
 // ----- Base Content ----- //
 
-$base-fontFamily: 'museo-sans-rounded', helvetica, tahoma, arial, sans-serif
-$base-fontSize: 16px
-$base-lineHeight: 1.618
-
-$base-fontSize-aaa: $base-fontSize * 0.75
-$base-fontSize-aa: $base-fontSize * 0.875
-// $base-fontSize-a: $base-fontSize
-$base-fontSize-b: $base-fontSize * 1.125
-$base-fontSize-c: $base-fontSize * 1.25
-$base-fontSize-d: $base-fontSize * 1.5
-$base-fontSize-e: $base-fontSize * 1.875
-$base-fontSize-f: $base-fontSize * 2.5
+$b-fontSize: 16px
+$b-fontSize-bp: 22px
+$b-lineHeight: 1.618
 
 // ----- Base Layout ----- //
 
-$base-whitespace: 20px
+$b-whitespace: 1rem * $b-lineHeight // one lead @16px
 
 // ----- Content ----- //
 
-$c-header-fontFamily: $base-fontFamily
-$c-mono-fontFamily: menlo, monaco, monospace
+$b-fontFamily: "ff-tisa-sans-web-pro", sans-serif
+$b-fontFamily-heading: "ff-tisa-web-pro", georgia, serif
+$b-fontFamily-monospace: "andale mono", "menlo", "monaco", monospace
 
 // ----- Layout ----- //
 
@@ -104,6 +90,4 @@ $l-maxWidth: 1020px
 
 // ----- Breakpoints ----- //
 
-$bp-grid: 46em
-
-$bp-fontSize-a: 50em
+$bp-layout: 50em
