post previews, lists, descriptions,

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,10 +52,15 @@ Now have fun looking around. :)
 
 	<footer class="l-footer">
 		<div>
-			<img class="c-circle" src="http://johndjameson.com/img/avatar.jpg" alt="The amiable John D. Jameson">
-			<p>John D. Jameson</p>
+			<img class="c-circle" src="/img/avatar.jpg" alt="The amiable John D. Jameson">
+			<p class="logo--b">John D. Jameson</p>
 			<p>Web designer and front-end developer in Orlando, Florida.</p>
 		</div>
+		<ul>
+        	<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
+        	<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
+    	    <li><a href="http://codepen.io/johndjameson/">CodePen</a></li>
+	    </ul>
 	</footer>
 
 	<p class="l-quote">“You're ready. Start making stuff.” —&nbsp;Austin&nbsp;Kleon</p>
