--- a/sass/core/_helpers.sass
+++ b/sass/core/_helpers.sass
@@ -50,7 +50,7 @@
 
 // ----- Clearfix ----- //
 
-%group:after
+%group::after
   clear: both
   content: ''
   display: table
@@ -61,7 +61,7 @@
   background-color: transparent
   border: 0
   overflow: hidden
-  &:before
+  &::before
     content: ''
     display: block
     width: 0
