--- a/sass/core/_layout.sass
+++ b/sass/core/_layout.sass
@@ -43,7 +43,7 @@
 // -------------------------------------
 
 .l-quote
-  color: $c-subdued
+  color: $c-text-soft
   font-size: em(14px)
   text-align: center
   +respond-to($bp-layout)
