--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -58,7 +58,7 @@
 // ----- Base Colors ----- //
 
 $c-text: #222
-$c-subdued: #666
+$c-text-soft: #666
 $c-heading: #333
 $c-background: white
 $c-primary: #705b91
