--- a/sass/modules/_logo.sass
+++ b/sass/modules/_logo.sass
@@ -6,6 +6,7 @@
 // *************************************
 
 .logo
+  border: 0
   color: $c-heading
   font-family: $b-fontFamily-heading
   font-size: em(22px)
@@ -16,7 +17,8 @@
 //   Modifiers
 // -------------------------------------
 
-// .module--modifier
+.logo--b
+  font-family: $b-fontFamily-heading
 
 // -------------------------------------
 //   States
