--- a/sass/modules/_preview.sass
+++ b/sass/modules/_preview.sass
@@ -1,11 +1,15 @@
 // *************************************
 //
-//   Module
-//   -> This is an example module
+//   Preview
+//   -> A preview of a blog post with a
+//      little excerpt.
 //
 // *************************************
 
-// .module
+.preview
+  margin: 0 0 $b-whitespace*2 0
+  padding: $b-whitespace 0 0 0
+  position: relative
 
 // -------------------------------------
 //   Modifiers
@@ -31,5 +35,28 @@
 
 // ----- Submodule ----- //
 
-// .module-submodule
+.preview-title
+  font-size: em(26px)
+  margin: 0 0 $b-whitespace 0
+  // text-align: center
+  +respond-to($bp-layout)
+    font-size: em(42px, $b-fontSize-bp)
+  a
+    border: 0
+    color: inherit
 
+.preview-date
+  bottom: 100%
+  color: $c-heading
+  display: block
+  font-size: em(14px)
+  left: 0
+  letter-spacing: 0.2em
+  line-height: 1
+  margin-bottom: -1em
+  position: absolute
+  right: 0
+  // text-align: center
+  text-transform: uppercase
+  +respond-to($bp-layout)
+    font-size: em(16px, $b-fontSize-bp)
