RWD sidenotes, stole the stolen MVCSS grid, fallback fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,16 +51,29 @@ Now have fun looking around. :)
 	</script>
 
 	<footer class="l-footer">
-		<div>
-			<img class="c-circle" src="/img/avatar.jpg" alt="The amiable John D. Jameson">
-			<p class="logo--b">John D. Jameson</p>
-			<p>Web designer and front-end developer in Orlando, Florida.</p>
+		<div class="grid">
+			<div class="grid-box grid-box--lap--1of1 grid-box--desk--1of2">
+				<div class="grid">
+					<div class="grid-box grid-box--1of3">
+						<img class="c-circle" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
+					</div>
+					<div class="grid-box grid-box--2of3">
+						<p class="logo--b">John D. Jameson</p>
+						<p>Web designer and front-end developer in Orlando,&nbsp;Florida.</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="grid-box grid-box--lap--1of1 grid-box--desk--1of2">
+				<ul>
+					<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
+					<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
+					<li><a href="http://codepen.io/johndjameson/">CodePen</a></li>
+					<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
+				</ul>
+			</div>
+
 		</div>
-		<ul>
-        	<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-        	<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-    	    <li><a href="http://codepen.io/johndjameson/">CodePen</a></li>
-	    </ul>
 	</footer>
 
 	<p class="l-quote">“You're ready. Start making stuff.” —&nbsp;Austin&nbsp;Kleon</p>
