--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -29,6 +29,10 @@ body
 //   Block Content
 // -------------------------------------
 
+abbr
+  font-size: 90%
+  letter-spacing: 0.1em
+
 p
   margin: 0 0 $b-whitespace
 
