--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -80,9 +80,9 @@ $b-whitespace: 1rem * $b-lineHeight // one lead @16px
 
 // ----- Content ----- //
 
-$b-fontFamily: "ff-tisa-sans-web-pro", sans-serif
-$b-fontFamily-heading: "ff-tisa-web-pro", georgia, serif
-$b-fontFamily-monospace: "andale mono", "menlo", "monaco", monospace
+$b-fontFamily: "ff-tisa-sans-web-pro", "open sans", "lucida grande", "helvetica neue", sans-serif
+$b-fontFamily-heading: "ff-tisa-web-pro", georgia, palatino, "palatino linotype", serif
+$b-fontFamily-monospace: "andale mono", menlo, monaco, courier, "lucida console", monospace
 
 // ----- Layout ----- //
 
@@ -91,3 +91,4 @@ $l-maxWidth: 1020px
 // ----- Breakpoints ----- //
 
 $bp-layout: 50em
+$bp-sidenotes: $bp-layout*1.5
