Footer, code font, size, and word-wrapping, link hovers,

--- a/sass/application.sass
+++ b/sass/application.sass
@@ -45,6 +45,12 @@
 
 @import "modules/grid"
 
+@import "modules/highlight"
+
+@import "modules/image"
+
+@import "modules/list"
+
 @import "modules/logo"
 
 @import "modules/post"
