--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -82,7 +82,7 @@ $b-whitespace: 1rem * $b-lineHeight // one lead @16px
 
 $b-fontFamily: "ff-tisa-sans-web-pro", "open sans", "lucida grande", "helvetica neue", sans-serif
 $b-fontFamily-heading: "ff-tisa-web-pro", georgia, palatino, "palatino linotype", serif
-$b-fontFamily-monospace: "andale mono", menlo, monaco, courier, "lucida console", monospace
+$b-fontFamily-monospace: menlo, monaco, "andale mono", courier, "lucida console", monospace
 
 // ----- Layout ----- //
 
