--- a/sass/modules/_image.sass
+++ b/sass/modules/_image.sass
@@ -1,28 +1,26 @@
 // *************************************
 //
-//   Well
-//   -> An called-out area for code, etc.
+//   Image
+//   -> Any img tags or figures that
+//      need a little extra love.
 //
 // *************************************
 
-.well, %well
-  background-color: #f4f4f4
-  border: 1px solid $c-border
-  border-radius: $b-borderRadius
-  margin: 0 0 $b-whitespace 0
-  padding: $b-whitespace
+// .list
 
 // -------------------------------------
 //   Modifiers
 // -------------------------------------
 
-// .module--modifier
+// .image
+
 
 // -------------------------------------
 //   States
 // -------------------------------------
 
-// .is-module-state
+.image--content
+  margin-bottom: $b-whitespace
 
 // -------------------------------------
 //   Context
