--- a/sass/modules/_preview.sass
+++ b/sass/modules/_preview.sass
@@ -44,6 +44,10 @@
   a
     border: 0
     color: inherit
+    transition: 0.2s ease-in-out
+    &:hover
+      color: $c-primary
+      text-decoration: none
 
 .preview-date
   bottom: 100%
