--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,34 @@ Now have fun looking around. :)
 
 	{{content}}
 
+	<footer class="l-footer">
+		<div class="grid">
+			<div class="grid-box grid-box--lap--1of1 grid-box--desk--1of2">
+				<div class="grid">
+					<div class="grid-box grid-box--1of3">
+						<img class="c-circle image--content" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
+					</div>
+					<div class="grid-box grid-box--2of3">
+						<p class="logo--b">John D. Jameson</p>
+						<p class="c-small c-soft">Web designer and front-end developer in Orlando,&nbsp;Florida.</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="grid-box grid-box--lap--1of1 grid-box--desk--1of2">
+				<ul class="c-small list--social">
+					<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
+					<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
+					<li><a href="http://codepen.io/johndjameson/">CodePen</a></li>
+					<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
+				</ul>
+			</div>
+
+		</div>
+	</footer>
+
+	<p class="c-center c-small c-soft">“You're ready. Start making stuff.” —&nbsp;Austin&nbsp;Kleon</p>
+
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="/js/application.js"></script>
 
@@ -49,33 +77,5 @@ Now have fun looking around. :)
 		ga('create', 'UA-42673242-1', 'johndjameson.com');
 		ga('send', 'pageview');
 	</script>
-
-	<footer class="l-footer">
-		<div class="grid">
-			<div class="grid-box grid-box--lap--1of1 grid-box--desk--1of2">
-				<div class="grid">
-					<div class="grid-box grid-box--1of3">
-						<img class="c-circle" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
-					</div>
-					<div class="grid-box grid-box--2of3">
-						<p class="logo--b">John D. Jameson</p>
-						<p>Web designer and front-end developer in Orlando,&nbsp;Florida.</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="grid-box grid-box--lap--1of1 grid-box--desk--1of2">
-				<ul>
-					<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-					<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-					<li><a href="http://codepen.io/johndjameson/">CodePen</a></li>
-					<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
-				</ul>
-			</div>
-
-		</div>
-	</footer>
-
-	<p class="l-quote">“You're ready. Start making stuff.” —&nbsp;Austin&nbsp;Kleon</p>
 </body>
 </html>
