--- a/sass/core/_layout.sass
+++ b/sass/core/_layout.sass
@@ -30,13 +30,13 @@
 // -------------------------------------
 
 .l-footer
-  border: 1px solid $c-border
-  border-left: 0
-  border-right: 0
-  margin: $b-whitespace*2 auto $b-whitespace
+  border-top: 1px solid $c-border
+  margin: $b-whitespace auto $b-whitespace
   max-width: 33em*1.25
   max-width: calc(33em + #{$b-whitespace}*4)
-  padding: $b-whitespace 0
+  padding: $b-whitespace 0 0
+  +respond-to($bp-layout)
+    border-bottom: 1px solid $c-border
 
 // -------------------------------------
 //   Footer Quote
