--- a/sass/modules/_highlight.sass
+++ b/sass/modules/_highlight.sass
@@ -1,16 +1,19 @@
 // *************************************
 //
-//   Well
-//   -> An called-out area for code, etc.
+//   Highlight
+//   -> Code blocks
 //
 // *************************************
 
-.well, %well
+.highlight
+  @extend %well
   background-color: #f4f4f4
-  border: 1px solid $c-border
-  border-radius: $b-borderRadius
-  margin: 0 0 $b-whitespace 0
-  padding: $b-whitespace
+  font-size: em(14px)
+  overflow: auto
+  +respond-to($bp-layout)
+    font-size: em(16px, $b-fontSize-bp)
+  code
+    white-space: pre
 
 // -------------------------------------
 //   Modifiers
