--- a/sass/core/_content.sass
+++ b/sass/core/_content.sass
@@ -66,10 +66,10 @@ h4
 .c-circle, %c-circle
   border-radius: 50%
 
-.c-soft
+.c-soft, %c-small
   color: $c-text-soft
 
-.c-small
+.c-small, %c-small
   font-size: em(14px)
   +respond-to($bp-layout)
     font-size: em(16px, $b-fontSize-bp)
