--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@ Now have fun looking around. :)
 			<div class="grid-box grid-box--lap--1of1 grid-box--desk--1of2">
 				<div class="grid">
 					<div class="grid-box grid-box--1of3">
-						<img class="c-circle image--content" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
+						<img class="c-circle" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
 					</div>
 					<div class="grid-box grid-box--2of3">
 						<p class="logo--b">John D. Jameson</p>
@@ -63,7 +63,7 @@ Now have fun looking around. :)
 		</div>
 	</footer>
 
-	<p class="c-center c-small c-soft">“You're ready. Start making stuff.” —&nbsp;Austin&nbsp;Kleon</p>
+	<p class="l-quote">“You're ready. Start making stuff.” —&nbsp;Austin&nbsp;Kleon</p>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="/js/application.js"></script>
