Responsive Sidenotes, inline code tweaks
WHOOOOOOOOOOOOO

--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -92,6 +92,11 @@ blockquote
 
 code
   font-family: $b-fontFamily-monospace
+  p &, li &
+    background-color: #f4f4f4
+    border-radius: $b-borderRadius/2
+    font-size: 85%
+    padding: 0 0.25em
 
 img
   display: block
@@ -100,11 +105,6 @@ img
 
 p
   margin: 0 0 $b-whitespace 0
-  code
-    background-color: #f4f4f4
-    border-radius: $b-borderRadius/2
-    font-size: 85%
-    padding: 0 0.25em
 
 pre
   font-family: inherit
