--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <!--
 
 The source code for this entire website is
@@ -16,14 +16,15 @@ Now have fun looking around. :)
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width">
 
-	<title>{{ page.title }} | John D. Jameson </title>
+	<title>{{ page.title }} | John D. Jameson</title>
 
-	<link rel="stylesheet" href="/css/application.css">
+	<meta name="description" content="Web designer and front-end developer in Orlando, Florida.">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="author" href="https://plus.google.com/u/0/113914298266231922059/posts">
 	<link rel="alternate" type="application/rss+xml"  href="http://www.johndjameson.com/feed.xml" title="John D. Jameson">
 
+	<link rel="stylesheet" href="/css/application.css">
 	<script type="text/javascript" src="//use.typekit.net/gqu6ggi.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
@@ -46,7 +47,7 @@ Now have fun looking around. :)
 					</div>
 					<div class="grid-box grid-box--2of3">
 						<p class="logo--b">John D. Jameson</p>
-						<p class="c-small c-soft">Web designer and front-end developer in Orlando,&nbsp;Florida.</p>
+						<p class="c-small c-soft">Web designer and front&#x2011;end developer in Orlando,&nbsp;Florida.</p>
 					</div>
 				</div>
 			</div>
