Code highlighting, CSS minification, GitHub link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,7 @@ Now have fun looking around. :)
 					<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
 					<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
 					<li><a href="http://codepen.io/johndjameson/">CodePen</a></li>
+					<li><a href="https://github.com/johndjameson">GitHub</a></li>
 					<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
 				</ul>
 			</div>
