Ampersands & post draft

--- a/sass/application.sass
+++ b/sass/application.sass
@@ -43,6 +43,8 @@
 //   Modules
 // -------------------------------------
 
+@import "modules/ampersand"
+
 @import "modules/grid"
 
 @import "modules/highlight"
