--- a/sass/core/_settings.sass
+++ b/sass/core/_settings.sass
@@ -46,7 +46,7 @@ $b-fontFamily-monospace: menlo, monaco, "andale mono", courier, "lucida console"
 
 // ----- Layout ----- //
 
-$l-maxWidth: 1020px
+$l-maxWidth: 33em
 
 // ----- Breakpoints ----- //
 
