--- a/sass/core/_layout.sass
+++ b/sass/core/_layout.sass
@@ -12,8 +12,8 @@
 .l-header
   border-bottom: 1px solid $c-border
   margin: $b-whitespace auto $b-whitespace*2
-  max-width: 33em*1.25
-  max-width: calc(33em + #{$b-whitespace}*4)
+  max-width: $l-maxWidth*1.25
+  max-width: calc($l-maxWidth + #{$b-whitespace}*4)
   padding-bottom: $b-whitespace
   text-align: center
 
@@ -23,7 +23,7 @@
 
 .l-main
   margin: 0 auto
-  max-width: 33em
+  max-width: $l-maxWidth
 
 // -------------------------------------
 //   Footer
@@ -32,8 +32,8 @@
 .l-footer
   border-top: 1px solid $c-border
   margin: $b-whitespace auto $b-whitespace
-  max-width: 33em*1.25
-  max-width: calc(33em + #{$b-whitespace}*4)
+  max-width: $l-maxWidth*1.25
+  max-width: calc($l-maxWidth + #{$b-whitespace}*4)
   padding: $b-whitespace 0 0
   +respond-to($bp-layout)
     border-bottom: 1px solid $c-border
