Renamed .post-intro classes, A&GF tweaks

--- a/sass/modules/_ampersand.sass
+++ b/sass/modules/_ampersand.sass
@@ -1,7 +1,7 @@
 // *************************************
 //
 //   Ampersand
-//   -> This is an example module
+//   -> An elegant ampersand
 //
 // *************************************
 
