--- a/sass/modules/_post.sass
+++ b/sass/modules/_post.sass
@@ -62,6 +62,10 @@
   +respond-to($bp-layout)
     font-size: em(16px, $b-fontSize-bp)
 
+// ----- Post Intro ----- //
+.post-intro
+  @extend %c-smallcaps
+
 // ----- Post Marker ----- //
 
 .post-marker
