jekyllrb generator via Yeoman

--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -9,7 +9,7 @@
 //   Compass
 // -------------------------------------
 
-@import "compass"
+// @import "compass"
 
 // -------------------------------------
 //   Core
