--- a/app/_sass/core/_base.sass
+++ b/app/_sass/core/_base.sass
@@ -5,8 +5,8 @@
 //
 // *************************************
 
-*, *::before, *::after
-  +box-sizing(border-box)
+*, ::before, ::after
+  box-sizing: border-box
 
 html
   font-size: 100%
@@ -20,9 +20,6 @@ body
   line-height: $b-lineHeight
   padding: 0 $b-whitespace
   text-rendering: optimizeLegibility
-
-
-//::selection
 
 
 // -------------------------------------
