Removed grunt-concurrent, added Jekyll to LiveReload

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -25,12 +25,11 @@ Now have fun looking around. :)
 	<link rel="author" href="https://plus.google.com/u/0/113914298266231922059/posts">
 	<link rel="alternate" type="application/rss+xml"  href="http://www.johndjameson.com/feed.xml" title="John D. Jameson">
 
-	<link rel="stylesheet" href="/css/application.css">
+	<link rel="stylesheet" href="/css/application.min.css">
 	<script type="text/javascript" src="//use.typekit.net/gqu6ggi.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-
 	<header class="l-header" role="banner">
 		<nav role="navigation"><a class="logo" href="/">John D. Jameson</a></nav>
 	</header>
