Port to MVCSS v4

--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -1,66 +1,43 @@
 // *************************************
 //
 //   Application
-//   -> MVCSS v3.0.2
+//   -> MVCSS v4.0.0-alpha
 //
 // *************************************
 
 // -------------------------------------
-//   Compass
+//   Foundation
 // -------------------------------------
 
-// @import "compass"
+@import "foundation/reset"
+@import "foundation/settings"
+@import "foundation/helpers"
+@import "foundation/utilities"
+@import "foundation/base"
 
 // -------------------------------------
-//   Core
+//   Components
 // -------------------------------------
 
-// ----- Reset ----- //
-
-@import "core/reset"
-
-// ----- Settings ----- //
-
-@import "core/settings"
-
-// ----- Helpers ----- //
-
-@import "core/helpers"
-
-// ----- Base ----- //
-
-@import "core/base"
-
-// ----- Content ----- //
-
-@import "core/content"
-
-// ----- Layout ----- //
-
-@import "core/layout"
+@import "components/bucket"
+@import "components/card"
+@import "components/cell"
+@import "components/grid"
+@import "components/row"
 
 // -------------------------------------
-//   Modules
+//   Structures
 // -------------------------------------
 
-@import "modules/ampersand"
-
-@import "modules/grid"
-
-@import "modules/highlight"
-
-@import "modules/highlight-colors"
-
-@import "modules/list"
-
-@import "modules/logo"
-
-@import "modules/post"
-
-@import "modules/preview"
-
-@import "modules/well"
+@import "structures/ampersand"
+@import "structures/highlight-colors"
+@import "structures/list"
+@import "structures/logo"
+@import "structures/post"
+@import "structures/preview"
+@import "structures/well"
 
 // -------------------------------------
 //   Inbox
 // -------------------------------------
+
