--- a/app/_sass/structures/_example.sass
+++ b/app/_sass/structures/_example.sass
@@ -1,47 +1,33 @@
 // *************************************
 //
-//   Logo
-//   -> It's my name, yo.
+//   Strucutre
+//   -> This is an example structure
 //
 // *************************************
 
-.logo
-  border: 0
-  color: $c-heading
-  font-family: $b-fontFamily-heading
-  font-size: em(22px)
-  transition: 0.2s ease-in-out
-  &:hover
-    color: $c-primary
-    text-decoration: none
-  +respond-to($bp-layout)
-    font-size: em(26px, $b-fontSize-bp)
+// .structure
 
 // -------------------------------------
 //   Modifiers
 // -------------------------------------
 
-.logo--b
-  font-family: $b-fontFamily-heading
-  margin: 0
+// .structure--modifier
 
 // -------------------------------------
 //   States
 // -------------------------------------
 
-// .is-module-state
+// .structure.is-state
 
 // -------------------------------------
 //   Context
 // -------------------------------------
 
-// .has-module
+// .has-structure
 
 // -------------------------------------
-//   Submodules
+//   Scaffolding
 // -------------------------------------
 
-// ----- Submodule ----- //
-
-// .module-submodule
+// .structure-sub
 
