--- a/app/_sass/structures/_list.sass
+++ b/app/_sass/structures/_list.sass
@@ -1,16 +1,12 @@
 // *************************************
 //
-//   Well
-//   -> An called-out area for code, etc.
+//   List
+//   -> Variations on your standard ol
+//      and ul elements.
 //
 // *************************************
 
-.well, %well
-  background-color: #f4f4f4
-  border: 1px solid $c-border
-  border-radius: $b-borderRadius
-  margin: 0 0 $b-whitespace 0
-  padding: $b-whitespace
+// .list
 
 // -------------------------------------
 //   Modifiers
