--- a/app/_sass/structures/_logo.sass
+++ b/app/_sass/structures/_logo.sass
@@ -1,11 +1,11 @@
 // *************************************
 //
-//   Module
-//   -> This is an example module
+//   Logo
+//   -> It's my logo, yo.
 //
 // *************************************
 
-// .module
+// .logo
 
 // -------------------------------------
 //   Modifiers
