--- a/app/_sass/foundation/_settings.sass
+++ b/app/_sass/foundation/_settings.sass
@@ -17,7 +17,7 @@
 
 // ----- Base ----- //
 
-$b-borderColor: lighten(#0053c9, 10%)
+$b-borderColor: rgba(#975997, 0.25)
 $b-borderStyle: solid
 $b-borderWidth: 2px
 $b-border: $b-borderWidth $b-borderStyle $b-borderColor
@@ -41,7 +41,7 @@ $bp-sidenotes: 800px
 $c-background: #fff
 $c-base: #222
 $c-header: #333
-$c-highlight: #0053c9
+$c-highlight: #975997
 $c-invert: #fff
 $c-subdue: #ccc
 
