--- a/app/_sass/structures/_logo.sass
+++ b/app/_sass/structures/_logo.sass
@@ -5,7 +5,8 @@
 //
 // *************************************
 
-// .logo
+.logo
+  border: 0
 
 // -------------------------------------
 //   Modifiers
