--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -30,11 +30,11 @@
 // -------------------------------------
 
 @import "structures/ampersand"
+@import "structures/highlight"
 @import "structures/highlight-colors"
 @import "structures/list"
 @import "structures/logo"
 @import "structures/post"
-@import "structures/preview"
 @import "structures/well"
 
 // -------------------------------------
